[package]
name = "mysqlpinger"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
mysql utility cli
"""
readme = "README.md"
repository = "https://github.com/ymgyt/mysqlpinger"

[dependencies]
lazy_static = "1.4.0"
mysql = "17.0.0"
parse_duration = "2.0"
colored = "1.9"
log = "0.4"
env_logger = "0.6"
console = "0.9.2"

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"

